...
        //TODO: Избавиться от строки
        fatalError("init(coder:) has not been implemented")
    }
    
    private lazy var enterButton: UIButton = {
        var enterButton = UIButton()
        enterButton.accessibilityIdentifier = "Authenticate"
        enterButton.translatesAutoresizingMaskIntoConstraints = false
        enterButton.setTitle("Войти", for: .normal)
        enterButton.setTitleColor(.black, for: .normal)
        enterButton.titleLabel?.font = UIFont.systemFont(ofSize: 17)
        enterButton.layer.cornerRadius = 16
        enterButton.backgroundColor = .white
...
